# ML-Ops-lab11

./: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
src/sentiment_app/: app.py
tests/: test_app.py
