[project]
name = "MLOps_course_AGH_lab_11"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
]

[dependency-groups]
integration = [
    "requests>=2.32.5",
    "notebook>=7.5.0",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "httpx>=0.28.0",
    "fastapi>=0.122.0",
    "onnxruntime",
    "tokenizers",
    "numpy",
    "mangum>=0.20.0",
]

deployment = [
    "torch",
    "transformers",
    "boto3>=1.42.22",
    "joblib>=1.5.3",
    "skl2onnx>=1.19.1",
]

inference = [
    "onnxruntime",
    "tokenizers",
    "numpy",
    "onnx",
    "onnxscript>=0.5.6",
    "fastapi>=0.122.0",
    "uvicorn>=0.40.0",
    "awslambdaric>=3.1.1",
]
